--- a/ios/TelevisionAcademyIOSPlayerPlugin/Base.lproj/Main.storyboard
+++ b/ios/TelevisionAcademyIOSPlayerPlugin/Base.lproj/Main.storyboard
@@ -26,16 +26,27 @@
                                     <action selector="buttonDemo" destination="BYZ-38-t0r" eventType="touchUpInside" id="i6S-3M-Ldk"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LMI-RM-bXT">
+                                <rect key="frame" x="0.0" y="414" width="414" height="448"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="Qvr-Yh-lGG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="5ia-oR-mSE"/>
+                            <constraint firstItem="LMI-RM-bXT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="M0N-qF-nU7"/>
                             <constraint firstItem="Qvr-Yh-lGG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Y3f-5d-WvU"/>
+                            <constraint firstItem="LMI-RM-bXT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="amZ-L7-z5v"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Qvr-Yh-lGG" secondAttribute="trailing" constant="30" id="ek3-dd-fml"/>
+                            <constraint firstItem="LMI-RM-bXT" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="qHX-Sc-X80"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LMI-RM-bXT" secondAttribute="trailing" id="uA9-dL-h2o"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="r4K-Wk-eo9"/>
+                    <connections>
+                        <outlet property="inlineView" destination="LMI-RM-bXT" id="2ux-Hv-mHa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
