Remove action bar from the player activity.

--- a/android/ta_player_plugin/src/main/res/menu/ta_menu_activity_main.xml
+++ b/android/ta_player_plugin/src/main/res/menu/ta_menu_activity_main.xml
@@ -4,9 +4,10 @@
 
     <!-- A Cast Button -->
     <item
-        android:id="@+id/media_route_menu_item"
+        android:id="@+id/ta_media_route_menu_item"
         android:orderInCategory="101"
         android:title="@string/media_route_menu_title"
-        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
+        app:actionViewClass="android.support.v7.app.MediaRouteButton"
         app:showAsAction="always" />
+<!--    app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"-->
 </menu>
