--- a/android/ta_player_plugin/src/main/res/menu/ta_menu_activity_main.xml
+++ b/android/ta_player_plugin/src/main/res/menu/ta_menu_activity_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/ta_media_route_menu_item"
         android:orderInCategory="101"
         android:title="@string/media_route_menu_title"
-        app:actionViewClass="androidx.mediarouter.app.MediaRouteButton"
+        app:actionViewClass="android.support.v7.app.MediaRouteButton"
         app:showAsAction="always" />
 <!--    app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"-->
 </menu>
