--- a/android/src/main/res/layout/activity_player.xml
+++ b/android/src/main/res/layout/activity_player.xml
@@ -9,4 +9,20 @@
         android:id="@+id/bitmovinPlayerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:indeterminate = "true"
+        android:max="100"
+        android:background="@color/black"
+        android:minWidth="200dp"
+        android:visibility="gone"
+        android:minHeight="100dp"
+        android:layout_gravity="center"
+        android:progress="0" />
+
+
 </FrameLayout>
