--- a/tvos/plugin/android/src/main/res/layout/player_view.xml
+++ b/tvos/plugin/android/src/main/res/layout/player_view.xml
@@ -3,4 +3,5 @@
     android:id="@+id/bitmovinPlayerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:keepScreenOn="true"
     android:descendantFocusability="blocksDescendants" />
